--- a/css/snte.css
+++ b/css/snte.css
@@ -42,6 +42,7 @@ div#snte-workspace-container {
 div#snte-workspace {
   /*width: 5000px;
   height: 5000px;*/
+  position: relative;
 }
 
 
@@ -82,11 +83,18 @@ button#snte-menu-font-underline {
 div.snte-element-table {
   margin: 20px 0 0 20px;
 }
-
+div.snte-element-text {
+  margin: 0 0 0 20px;
+  min-width: 200px;
+  min-height: 200px;
+}
 
 div.snte-element-container {
   padding: 0;
   display: inline-block;
+  position: absolute;
+  top: 50px;
+  left: 50px;
 }
 div.snte-element-container div.snte-element-control-handles {
   width: 20px;
@@ -122,4 +130,5 @@ div.snte-element-container div.snte-element-control-handles div.snte-element-del
 
 .snte-highlighted {
   /*border: 1px #fc0 solid;*/
+  background: rgba(255,255,255,0.6);
 }
