--- a/css/snte.css
+++ b/css/snte.css
@@ -86,7 +86,29 @@ div.snte-element-table {
 div.snte-element-text {
   margin: 0 0 0 20px;
   min-width: 200px;
-  min-height: 40px;
+  min-height: 200px;
+}
+
+div.snte-element-comment {
+  min-width: 275px;
+  min-height: 175px;
+  margin: 0 0 0 20px;
+  background:#fefabc; 
+  padding:15px; 
+  font-family: 'Gloria Hallelujah', cursive; 
+  font-size:15px; 
+  color: #000; 
+  width:200px; 
+
+  /*-moz-transform: rotate(1deg);
+  -webkit-transform: rotate(1deg);
+  -o-transform: rotate(1deg);
+  -ms-transform: rotate(1deg);
+  transform: rotate(1deg);*/
+
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 div.snte-element-container {
