--- a/css/snte.css
+++ b/css/snte.css
@@ -199,7 +199,7 @@ div.snte-element-container div.snte-element-control-handles div.snte-element-del
 }
 
 .snte-hidden {
-  display: none;
+  display: none !important;
 }
 
 
