--- a/css/snte.css
+++ b/css/snte.css
@@ -108,7 +108,7 @@ div.snte-element-text {
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
 }
-div.snte-element-text:hover, div.snte-element-text.snte-highlighted {
+div.snte-element-text:hover, div.snte-element-text:focus {
   border: 2px dashed #e4e4e4;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
