--- a/css/snte.css
+++ b/css/snte.css
@@ -17,6 +17,7 @@ div#snte-chrome-top {
 }
 div#snte-main {
   width: 100%;
+  height: 100%;
   min-width: 960px;
 }
 div#snte-chrome-left {
@@ -95,6 +96,10 @@ div.snte-element-table {
 }
 div.snte-element-table table tr {
   background-color: #fff;
+}
+
+div.snte-element-image {
+  margin: 0 0 0 20px;
 }
 
 
@@ -306,6 +311,25 @@ button#snte-menu-toggle-comments.active {
 div.snte-searchbox-resultcount {
   float: right;
   color: #cccccc;
+}
+
+
+
+#snte-image-upload-dropzone {
+  width: 100%;
+  height: 500px;
+  border: 3px dashed #ccc;
+  margin-top: 10px;
+  text-align: center;
+  padding: 40% 0;
+  color: #ccc;
+  font-size: 30px;
+  /*text-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px;*/
+}
+#snte-image-upload-dropzone.dragover {
+  background-color: #ccc;
+  color: #999;
+  border-color: #999;
 }
 
 
