--- a/css/snte.css
+++ b/css/snte.css
@@ -313,25 +313,26 @@ div.snte-searchbox-resultcount {
   color: #cccccc;
 }
 
+div#snte-image-add-tab-upload, div#snte-image-add-tab-link {
+  margin-top: 10px;
+}
 
-
-#snte-image-upload-dropzone {
+div#snte-image-upload-dropzone {
   width: 100%;
   height: 500px;
   border: 3px dashed #ccc;
-  margin-top: 10px;
+  
   text-align: center;
   padding: 40% 0;
   color: #ccc;
   font-size: 30px;
   /*text-shadow: rgba(0, 0, 0, 0.1) 3px 3px 5px;*/
 }
-#snte-image-upload-dropzone.dragover {
+div#snte-image-upload-dropzone.dragover {
   background-color: #ccc;
   color: #999;
   border-color: #999;
 }
-
 
 
 /*
