--- a/css/snte.css
+++ b/css/snte.css
@@ -3,14 +3,6 @@ html, body {
   padding: 0;
   height: 100%;
 }
-div#snte-page {
-  margin: 0;
-  padding: 0;
-  position: relative; /*** Let's be nice to IE ***/
-  width: 100%; /*** Content Width ***/
-  display: table; /*** For non-IE browsers ***/
-  height: 100%;
-}
 div#snte-chrome-top {
   width: 100%;
   height: 55px;
@@ -173,7 +165,7 @@ div.snte-element-container div.snte-element-controls {
 div.snte-element-container:hover div.snte-element-controls {
   display: block;
 }
-div.snte-element-container div.snte-element-controls:hover {
+div.snte-element-container div.snte-element-controls:hover, div.snte-element-container div.snte-element-title:hover {
   cursor: move;
 }
 
@@ -189,6 +181,15 @@ div.snte-element-container div.snte-element-title {
 }
 div.snte-element-container:hover div.snte-element-title {
   background: #e4e4e4;
+}
+div.snte-element-container input.snte-element-title-input {
+  width: 50%;
+  border: none;
+  background: none;
+}
+div.snte-element-container input.snte-element-title-input:hover {
+  cursor: auto;
+  border: 1px #ccc solid;
 }
 div.snte-element-container:hover div.snte-element-table {
   box-shadow: none;
