ordered and unordered lists for textfields and comments

--- a/css/snte.css
+++ b/css/snte.css
@@ -103,7 +103,7 @@ div.snte-element-text {
   /*min-width: 200px;
   min-height: 200px;*/
   min-width: 20px;
-  min-height: 30px;
+  min-height: 30px  
   border-radius: 5px;
   box-shadow: none;
   -moz-box-shadow: none;
