--- a/css/snte.css
+++ b/css/snte.css
@@ -144,7 +144,7 @@ textarea.snte-formula {
 }
 
 div.snte-element-image {
-  margin: 0 0 0 20px;
+  margin: 0 0px 0 20px;
 }
 
 
@@ -176,7 +176,7 @@ div.snte-element-text:hover {
 div.snte-element-comment {
   /*width: 100%;*/
   height: 100%;
-  margin: 0 20px 0 20px;
+  margin: 0 0px 0 20px;
   background: #fefabc; 
   padding: 15px; 
   /*font-family: 'Gloria Hallelujah', cursive;*/
@@ -214,6 +214,7 @@ div.snte-element-container div.snte-element-controls {
   /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);*/
+  /*margin-bottom: 20px;*/
 }
 div.snte-element-container:hover div.snte-element-controls {
   display: block;
