--- a/css/snte.css
+++ b/css/snte.css
@@ -37,7 +37,7 @@ div#snte-menubar-formula-help {
   /*display: inline;
   background: grey;*/
 }
-div#snte-menubar-formula-help span.syntax {
+div#snte-menubar-formula-help span.syntax, div#snte-chart-wizard-cellrange span.syntax {
   font-family: "Courier New";
 }
 div#snte-menubar-formula-help span.function {
@@ -49,7 +49,7 @@ div#snte-menubar-formula-help span.bracket {
 div#snte-menubar-formula-help span.text {
   color: #0000FF;
 }
-div#snte-menubar-formula-help span.cellref {
+div#snte-menubar-formula-help span.cellref, div#snte-chart-wizard-cellrange span.cellref {
   font-weight: bolder;
   color: #FF8822;
 }
@@ -144,10 +144,12 @@ textarea.snte-formula {
 }
 
 div.snte-element-image {
-  margin: 0 0px 0 20px;
+  margin: 0 0 0 20px;
 }
 
-
+div.snte-element-chart {
+  margin: 20px 0 0 20px;
+}
 
 div.snte-element-text {
   margin: 0 0 0 20px;
@@ -176,7 +178,7 @@ div.snte-element-text:hover {
 div.snte-element-comment {
   /*width: 100%;*/
   height: 100%;
-  margin: 0 0px 0 20px;
+  margin: 0 0 0 20px;
   background: #fefabc; 
   padding: 15px; 
   /*font-family: 'Gloria Hallelujah', cursive;*/
@@ -232,6 +234,7 @@ div.snte-element-container div.snte-element-title {
   padding-left: 20px;
   background: #fff;
   border-radius: 5px 5px 0 0;
+  font-weight: bold;
 }
 div.snte-element-container:hover div.snte-element-title {
   background: #e4e4e4;
@@ -241,11 +244,11 @@ div.snte-element-container input.snte-element-title-input {
   border: none;
   background: none;
 }
-div.snte-element-container input.snte-element-title-input:hover {
+div.snte-element-container input.snte-element-title-input:hover, div.snte-element-container input.snte-element-title-input:focus {
   cursor: auto;
   border: 1px #ccc solid;
 }
-div.snte-element-container:hover div.snte-element-table {
+div.snte-element-container:hover div.snte-element-table, div.snte-element-container:hover div.snte-element-chart {
   box-shadow: none;
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
@@ -457,6 +460,50 @@ div#snte-image-upload-dropzone.dragover {
   background-color: #ccc;
   color: #999;
   border-color: #999;
+}
+
+div#snte-chart-wizard-cellrange {
+  font-weight: bold;
+}
+
+div#snte-chart-modal div.modal-body {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+div#snte-chart-modal div.modal-body h5 {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+div#snte-chart-modal button.snte-chart-wizard-type {
+  margin: 4px;
+  padding: 8px 8px 4px 8px;
+}
+div#snte-chart-modal button.snte-chart-wizard-type>span {
+  height: 68px;
+  width: 110px;
+  display: inline-block;
+}
+button#snte-chart-wizard-type-line>span {
+  background: url('../img/google-charts-thumbs.png') no-repeat scroll 0 -544px rgba(0, 0, 0, 0);
+}
+button#snte-chart-wizard-type-smoothline>span {
+  background: url('../img/google-charts-thumbs.png') no-repeat scroll 0 -3119px rgba(0, 0, 0, 0);
+}
+button#snte-chart-wizard-type-area>span {
+  background: url('../img/google-charts-thumbs.png') no-repeat scroll 0 -2779px rgba(0, 0, 0, 0);
+}
+button#snte-chart-wizard-type-vbar>span {
+  background: url('../img/google-charts-thumbs.png') no-repeat scroll 0 -2099px rgba(0, 0, 0, 0);
+}
+button#snte-chart-wizard-type-hbar>span {
+  background: url('../img/google-charts-thumbs.png') no-repeat scroll 0 -3187px rgba(0, 0, 0, 0);
+}
+button#snte-chart-wizard-type-pie>span {
+  background: url('../img/google-charts-thumbs.png') no-repeat scroll 0 -3852px rgba(0, 0, 0, 0);
+}
+button#snte-chart-wizard-type-donut>span {
+  background: url('../img/google-charts-thumbs.png') no-repeat scroll 0 -2371px rgba(0, 0, 0, 0);
 }
 
 
