--- a/css/snte.css
+++ b/css/snte.css
@@ -167,6 +167,7 @@ div.snte-element-text:hover, div.snte-element-text:focus {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: white;
 }
 div.snte-element-text:hover {
   border-bottom-left-radius: 0;
@@ -178,7 +179,8 @@ div.snte-element-text:hover {
 div.snte-element-comment {
   /*width: 100%;*/
   height: 100%;
-  margin: 0 0 0 20px;
+  margin: 0 12px 0 20px;
+
   background: #fefabc; 
   padding: 15px; 
   /*font-family: 'Gloria Hallelujah', cursive;*/
@@ -195,6 +197,9 @@ div.snte-element-comment {
   /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);*/
+}
+div.snte-comment-resizehandle {
+  bottom: -10px !important;
 }
 
 div.snte-element-container {
