--- a/css/snte.css
+++ b/css/snte.css
@@ -87,17 +87,19 @@ div#snte-workspace {
 span#snte-menu-fill-color-indicator {
   background: #fff;
   border: 1px black solid;
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   display: inline-block;
+  border-radius: 2px;
 }
 span#snte-menu-font-color-indicator {
   background: #000;
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   display: inline-block;
+  border-radius: 2px;
 }
-button#snte-menu-font-bold {
+/*button#snte-menu-font-bold {
   font-weight: bold;
 }
 button#snte-menu-font-italic {
@@ -108,7 +110,7 @@ button#snte-menu-font-strikethrough {
 }
 button#snte-menu-font-underline {
   text-decoration: underline;
-}
+}*/
 
 div#snte-menubar-formula button, div.snte-formula-arithmetics button {
   font-weight: bold;
@@ -156,17 +158,17 @@ div.snte-element-text {
   /*min-width: 200px;
   min-height: 200px;*/
   min-width: 20px;
-  min-height: 30px  
+  min-height: 30px; 
   border-radius: 5px;
-  box-shadow: none;
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
+  box-shadow: none;
 }
 div.snte-element-text:hover, div.snte-element-text:focus {
   border: 2px dashed #e4e4e4;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: white;
 }
 div.snte-element-text:hover {
@@ -206,10 +208,10 @@ div.snte-element-container {
   padding: 0;
   display: inline-block;
   position: absolute;
-  /*top: 115px;
-  left: 50px;*/
-  left: 30%;
-  top: 30%;
+  top: 115px;
+  left: 50px;
+  /*left: 30%;
+  top: 30%;*/
 }
 div.snte-element-container div.snte-element-controls {
   display: none;
@@ -256,9 +258,9 @@ div.snte-element-container input.snte-element-title-input:hover, div.snte-elemen
   border: 1px #ccc solid;
 }
 div.snte-element-container:hover div.snte-element-table, div.snte-element-container:hover div.snte-element-chart {
-  box-shadow: none;
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 
@@ -350,6 +352,11 @@ button#snte-menu-toggle-comments.active {
 
 div#snte-menu-add-element .dropdown-menu span {
   margin-right: 5px;
+  font-size: 16px;
+  vertical-align: middle;
+}
+div#snte-menu-add-element .dropdown-menu a {
+  height: 2.5em;
 }
 
 
@@ -423,7 +430,7 @@ div#snte-menu-add-element .dropdown-menu span {
   font-size: 0.8em;
   margin-right: 5px;
   float: right;
-  display: inline-block;
+  display: block;
   margin-top: -2em;
 }
 
