--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?-b7pdgi');
-	src:url('../fonts/icomoon.eot?#iefix-b7pdgi') format('embedded-opentype'),
-		url('../fonts/icomoon.woff?-b7pdgi') format('woff'),
-		url('../fonts/icomoon.ttf?-b7pdgi') format('truetype'),
-		url('../fonts/icomoon.svg?-b7pdgi#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot');
+	src:url('../fonts/icomoon.eot') format('embedded-opentype'),
+		url('../fonts/icomoon.woff') format('woff'),
+		url('../fonts/icomoon.ttf') format('truetype'),
+		url('../fonts/icomoon.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
