--- a/css/snte.css
+++ b/css/snte.css
@@ -165,6 +165,7 @@ div.snte-element-text {
   box-shadow: none;
 }
 div.snte-element-text:hover, div.snte-element-text:focus {
+  outline: none; /* for chrome */
   border: 2px dashed #e4e4e4;
   -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -176,8 +177,11 @@ div.snte-element-text:hover {
   border-top-left-radius: 0;
 }
 
-
-
+div.snte-element-comment:focus {
+   /* for chrome */
+  outline: none;
+  border: none;
+}
 div.snte-element-comment {
   /*width: 100%;*/
   height: 100%;
