--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -50,60 +50,122 @@
 .icon-search:before {
 	content: "\e608";
 }
-.icon-pie:before {
+.icon-contract:before {
 	content: "\e609";
 }
-.icon-stats:before {
+.icon-pie:before {
 	content: "\e60a";
 }
-.icon-remove:before {
+.icon-stats:before {
 	content: "\e60b";
 }
-.icon-list:before {
+.icon-bars:before {
 	content: "\e60c";
 }
-.icon-numbered-list:before {
+.icon-remove:before {
 	content: "\e60d";
 }
-.icon-scissors:before {
+.icon-remove2:before {
 	content: "\e60e";
 }
-.icon-font:before {
+.icon-list:before {
 	content: "\e60f";
 }
-.icon-bold:before {
+.icon-numbered-list:before {
 	content: "\e610";
 }
-.icon-underline:before {
+.icon-download:before {
 	content: "\e611";
 }
-.icon-italic:before {
+.icon-upload:before {
 	content: "\e612";
 }
-.icon-strikethrough:before {
+.icon-upload2:before {
 	content: "\e613";
 }
-.icon-table:before {
+.icon-upload3:before {
 	content: "\e614";
 }
-.icon-pilcrow:before {
+.icon-upload4:before {
 	content: "\e615";
 }
-.icon-paragraph-left:before {
+.icon-eye-blocked:before {
+	content: "\e62b";
+}
+.icon-close:before {
+	content: "\e62a";
+}
+.icon-minus:before {
 	content: "\e616";
 }
-.icon-paragraph-center:before {
+.icon-plus:before {
 	content: "\e617";
 }
-.icon-paragraph-right:before {
+.icon-crop:before {
 	content: "\e618";
 }
-.icon-paragraph-left2:before {
+.icon-scissors:before {
 	content: "\e619";
 }
-.icon-paragraph-center2:before {
+.icon-font:before {
 	content: "\e61a";
 }
-.icon-paragraph-right2:before {
+.icon-bold:before {
 	content: "\e61b";
+}
+.icon-underline:before {
+	content: "\e61c";
+}
+.icon-italic:before {
+	content: "\e61d";
+}
+.icon-strikethrough:before {
+	content: "\e61e";
+}
+.icon-table:before {
+	content: "\e61f";
+}
+.icon-table2:before {
+	content: "\e620";
+}
+.icon-pilcrow:before {
+	content: "\e621";
+}
+.icon-paragraph-left:before {
+	content: "\e622";
+}
+.icon-paragraph-center:before {
+	content: "\e623";
+}
+.icon-paragraph-right:before {
+	content: "\e624";
+}
+.icon-paragraph-justify:before {
+	content: "\e625";
+}
+.icon-paragraph-left2:before {
+	content: "\e626";
+}
+.icon-paragraph-center2:before {
+	content: "\e627";
+}
+.icon-paragraph-right2:before {
+	content: "\e628";
+}
+.icon-paragraph-justify2:before {
+	content: "\e629";
+}
+
+
+.icon-row-below:before {
+	content: "\e612";
+}
+.icon-row-above:before {
+	content: "\e615";
+}
+.icon-col-left:before {
+	content: "\e613";
+}
+.icon-col-right:before {
+	content: "\e614";
 }
